@@ -2,6 +2,7 @@
 - Added Puppet 5 and OEL support
 - Dropped support for Hiera v4.  Dependency auditd has dropped support
   for Hiera v4, causing Puppet 4.7 tests to fail in this module.
+- Update badges and contribution guide URL in README.md
 
 * Thu Jun 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
 - Advance beyond bad changelog entry
